cmake_minimum_required(VERSION 3.9)
project(Compilador)

set(CMAKE_CXX_STANDARD 11)

add_executable(Compilador main.cpp lexer/lexer.h lexer/lexer.cpp lexer/token.h lexer/token.cpp lexer/automata.h gramaticas/Gramatica.h gramaticas/Gramatica.cpp formatedPrint.h gramaticas/GTablaFollows.h gramaticas/GTablaFollows.cpp gramaticas/nombresTerminales.h gramaticas/nombresTerminales.cpp semantico/erroresSemanticos.h gramaticas/familiasTerminales.h semantico/expresiones/Expresion.cpp semantico/expresiones/Expresion.h semantico/simbolos/tipos/TablaSimbolosTipos.cpp semantico/simbolos/tipos/TablaSimbolosTipos.h semantico/simbolos/tipos/SimboloTipo.cpp semantico/simbolos/tipos/SimboloTipo.h semantico/simbolos/variables/SimboloVariable.cpp semantico/simbolos/variables/SimboloVariable.h semantico/simbolos/variables/TablaSimbolosVariables.cpp semantico/simbolos/variables/TablaSimbolosVariables.h semantico/simbolos/funcionHash.h semantico/simbolos/funcionHash.cpp semantico/literales/LiteralArreglo.cpp semantico/literales/LiteralArreglo.h)